all working now but mobile demo still not dependent on madura-vaadin-touchkit
Need to fix mvt project and move code across to it.