@@ -53,7 +53,6 @@
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 		<jetty.plugin.version>9.2.3.v20140905</jetty.plugin.version>
 		<madura.objects.version>3.0.0-SNAPSHOT</madura.objects.version>
-<!-- 		<hibernate-version>4.1.4.Final</hibernate-version> -->
 		<project.scm.id>github</project.scm.id>
 		<project.source.version>1.7</project.source.version>
 		<project.target.version>1.7</project.target.version>
@@ -126,7 +125,7 @@
 			</dependency>
 			<dependency>
 				<groupId>nz.co.senanque</groupId>
-				<artifactId>madura.objects</artifactId>
+				<artifactId>madura-objects</artifactId>
 				<version>${madura.objects.version}</version>
 			</dependency>
 			<dependency>
@@ -198,11 +197,122 @@
 	<build>
 	    <pluginManagement>
 	    	<plugins>
-
-                <plugin>
-	                <groupId>com.vaadin</groupId>
-	                <artifactId>vaadin-maven-plugin</artifactId>
-	                <version>${vaadin.plugin.version}</version>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>2.4</version>
+					<executions>
+						<execution>
+							<id>attach-sources</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>2.9.1</version>
+					<executions>
+						<execution>
+							<id>attach-javadocs</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.jetty</groupId>
+					<artifactId>jetty-maven-plugin</artifactId>
+					<version>${jetty.plugin.version}</version>
+					<configuration>
+						<jvmArgs>-XX:PermSize=128M -XX:MaxPermSize=256M</jvmArgs>
+					    <scanIntervalSeconds>2</scanIntervalSeconds>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.kuali.maven.plugins</groupId>
+					<artifactId>properties-maven-plugin</artifactId>
+					<version>1.1.9</version>
+					<executions>
+						<execution>
+							<phase>initialize</phase>
+							<goals>
+								<goal>read-project-properties</goal>
+							</goals>
+							<configuration>
+								<locations>
+									<location>${HOME}/madura.properties</location>
+								</locations>
+								<quiet>true</quiet>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-gpg-plugin</artifactId>
+					<version>1.4</version>
+					<executions>
+						<execution>
+							<id>sign-artifacts</id>
+							<phase>verify</phase>
+							<goals>
+								<goal>sign</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>2.3</version>
+					<configuration>
+						<failOnMissingWebXml>false</failOnMissingWebXml>
+						<!-- Exclude some unnecessary files generated by the GWT compiler. -->
+						<packagingExcludes>WEB-INF/classes/VAADIN/gwt-unitCache/**,
+							WEB-INF/classes/VAADIN/widgetsets/WEB-INF/**</packagingExcludes>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.0</version>
+					<configuration>
+						<encoding>${project.encoding}</encoding>
+						<source>${project.source.version}</source>
+						<target>${project.target.version}</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>com.vaadin</groupId>
+					<artifactId>vaadin-maven-plugin</artifactId>
+					<version>${vaadin.plugin.version}</version>
+	                <configuration>
+	                    <webappDirectory>${basedir}/src/main/webapp/VAADIN/widgetsets</webappDirectory>
+	                    <hostedWebapp>${basedir}/src/main/webapp/VAADIN/widgetsets</hostedWebapp>
+	                    <noServer>true</noServer>
+	                    <!-- Remove draftCompile when project is ready -->
+	                    <draftCompile>false</draftCompile>
+	                    <compileReport>false</compileReport>
+	                    <style>OBF</style>
+	                    <persistentunitcachedir>${project.build.directory}</persistentunitcachedir>
+	                    <deploy>${project.build.directory}/gwt-deploy</deploy>
+	                    <runTarget>http://localhost:8080/</runTarget>
+	                    <extraJvmArgs>-Xmx1024M -Xss4024k -XX:MaxPermSize=128m</extraJvmArgs>
+	                </configuration>
+	                <executions>
+	                    <execution>
+	                        <goals>
+								<goal>update-theme</goal>
+	                            <goal>resources</goal><!-- ?? -->
+	                            <goal>update-widgetset</goal>
+	                            <goal>compile</goal>
+	                        </goals>
+	                    </execution>
+	                </executions>
 				</plugin>
 	            <plugin>
 	                <groupId>org.mortbay.jetty</groupId>
